--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="biz.bokhorst.xprivacy"
-    android:versionCode="22"
-    android:versionName="0.15" >
+    android:versionCode="23"
+    android:versionName="0.16" >
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -32,7 +32,7 @@
             android:value="XPrivacy" />
 
         <activity
-            android:name=".XMain"
+            android:name=".XFragmentMain"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,10 +41,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".XAppEdit"
+            android:name=".XActivitySingleApp"
             android:exported="true" >
         </activity>
-        <activity android:name=".XBatchEdit" >
+        <activity android:name=".XActivityRestriction" >
         </activity>
 
         <receiver android:name=".XPackageChange" >
