--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,9 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="17" />
 
-    <uses-permission android:name="biz.bokhorst.xprivacy.provider.WRITE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="biz.bokhorst.xprivacy.provider.WRITE" />
 
     <permission
         android:name="biz.bokhorst.xprivacy.provider.WRITE"
