--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="biz.bokhorst.xprivacy"
     android:versionCode="34"
-    android:versionName="0.27s" >
+    android:versionName="0.27" >
 
     <uses-sdk
         android:minSdkVersion="16"
