Refactored class names
Only classes involved in actual restricting start with an X

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,7 +58,7 @@
         </receiver>
 
         <provider
-            android:name=".XPrivacyProvider"
+            android:name=".PrivacyProvider"
             android:authorities="biz.bokhorst.xprivacy.provider"
             android:enabled="true"
             android:excludeFromRecents="true"
