--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,14 +9,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="biz.bokhorst.xprivacy.provider.WRITE" />
-
-    <permission
-        android:name="biz.bokhorst.xprivacy.provider.WRITE"
-        android:description="@string/app_name"
-        android:label="@string/app_name"
-        android:permissionGroup="android.permission-group.PERSONAL_INFO"
-        android:protectionLevel="signature" />
 
     <application
         android:allowBackup="true"
@@ -31,7 +23,7 @@
             android:value="2.0*" />
         <meta-data
             android:name="xposeddescription"
-            android:value="XPrivacy - The ultimate privacy manager" />
+            android:value="The ultimate privacy manager" />
 
         <activity
             android:name=".ActivityMain"
@@ -65,8 +57,6 @@
             android:exported="true"
             android:multiprocess="true"
             android:syncable="false" >
-
-            <!-- android:writePermission="biz.bokhorst.xprivacy.provider.WRITE" -->
         </provider>
     </application>
 
