Run provider in separate process

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -78,6 +78,7 @@
             android:excludeFromRecents="true"
             android:exported="true"
             android:multiprocess="true"
+            android:process=":provider"
             android:syncable="false" >
         </provider>
     </application>
