--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="true" />
         <meta-data
             android:name="xposedminversion"
-            android:value="2.0*" />
+            android:value="30+" />
         <meta-data
             android:name="xposeddescription"
             android:value="The ultimate privacy manager" />
