--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="XposedBridgeApi_2.1.jar"/>
+	<classpathentry kind="lib" path="XposedBridgeApi-30.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
