--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@android:style/Theme.Translucent" >
+        android:theme="@style/CustomTheme.Light" >
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
