Remove task affinity
Refs #804

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,8 +42,7 @@
         </activity>
         <activity
             android:name=".ActivityApp"
-            android:parentActivityName=".ActivityMain"
-            android:taskAffinity=".ActivityMain" >
+            android:parentActivityName=".ActivityMain" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="biz.bokhorst.xprivacy.ActivityMain" />
