--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -130,6 +130,7 @@
             android:enabled="true"
             android:exported="true"
             android:process=":provider"
+            android:singleUser="true"
             android:syncable="false" >
         </provider>
     </application>
