Added location restriction for Google Play services
See "contributing" for how to add the Google Play Services library

Refs #1011

--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-19
+android.library=false
+android.library.reference.1=../google-play-services_lib
