--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,8 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/CustomTheme.Light" >
+
+        <!-- Xposed -->
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
@@ -41,6 +43,11 @@
         <meta-data
             android:name="xposeddescription"
             android:value="The ultimate privacy manager" />
+
+        <!-- Google Play services -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <!-- Samsung multi window support -->
         <meta-data
