Move submit to activity share

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -99,6 +99,7 @@
                 <action android:name="biz.bokhorst.xprivacy.action.IMPORT" />
                 <action android:name="biz.bokhorst.xprivacy.action.EXPORT" />
                 <action android:name="biz.bokhorst.xprivacy.action.FETCH" />
+                <action android:name="biz.bokhorst.xprivacy.action.SUBMIT" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
