--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -129,7 +129,8 @@
 
         <service
             android:name=".UpdateService"
-            android:enabled="true" />
+            android:enabled="true"
+            android:process=":update" />
     </application>
 
 </manifest>
