--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="biz.bokhorst.xprivacy"
+    android:installLocation="internalOnly"
     android:versionCode="278"
     android:versionName="1.99.44" >
 
